--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-actions.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-actions.phtml
@@ -29,39 +29,36 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
 $isProductInCart = $productType !== 'simple' && $this->helper(Cart::class)->getQuote()->hasProductId($product->getId());
 $isPopup = $block->getData('is_popup') || false;
 $isSmall = $block->getData('is_small') || false;
+$hasVariants = $productType === 'configurable';
 
-$is_variant_in_cart = false;
-$is_variants_popup = $isPopup && $productType === 'configurable';
-$is_variant_in_stock = $product->isSaleable();
-$is_hide_add_to_cart_on_mobile = !$product->isSaleable() || $productType === 'configurable';
-$variant_count = 0;
+$isVariantsPopup = $isPopup && $hasVariants;
 
+// hide on mobile always when out of stock, if in stock then hide on mobile when not popup & product is configurable, if popup hide if variant in cart
 $hideOnMobile = false;
-if ($product->isSaleable()) {
+if (!$product->isSaleable()) {
   $hideOnMobile = true;
+} elseif ($isPopup) {
+  $hideOnMobile = $isProductInCart;
 } else {
-  if (!$isPopup && $productType === 'configurable') {
-    $hideOnMobile = true;
-  } else {
-    if ($isPopup && $is_variant_in_cart) {
-      $hideOnMobile = true;
-    }
-  }
+  $hideOnMobile = $hasVariants;
 }
 
 ?>
 <!-- Quantity Controls -->
 <?= $block->getChildHtml("product.info.quantity") ?>
 
-<!-- Add to cart button, appears on desktop, and on mobile for simple products -->
+<!-- Add to cart button -->
 <button
-    x-show="<?= $product->isSaleable() ?> && (!isVariantInCart || <?= (int) $is_variants_popup ?>)"
-    class="animate-on-transition button button--filled-primary flex-grow <?= $isSmall ? 'button--size-sm' : '' ?> <?= $hideOnMobile ? 'max-md:hidden' : '' ?> <?= !$product->isSaleable() ? 'md:hidden' : '' ?>"
+    <?php if ($isProductInCart && !$isVariantsPopup && $product->isSalable()): ?>
+      style="display: none"
+    <?php endif; ?>
+    x-show="<?= $product->isSaleable() ?> && (!isVariantInCart || <?= (int) $isVariantsPopup ?>)"
+    class="animate-on-transition button button--filled-primary flex-grow <?= $isSmall ? 'button--size-sm' : '' ?> <?= $hideOnMobile ? 'max-md:hidden' : '' ?>"
     @click.prevent="addToCart()"
     x-a11y-trap-target.end="$store.popup.currentPopup === productActionsPopup"
     :class="
         {
-            'max-md:hidden': <?= (int) ($productType === 'configurable') ?> && (!<?= (int) $is_variants_popup ?> || (<?= (int) $is_variants_popup ?> && isVariantInCart)),
+            'max-md:hidden': <?= (int) $hasVariants ?> && (!<?= (int) $isVariantsPopup ?> || (<?= (int) $isVariantsPopup ?> && isVariantInCart)),
             'button--disabled': isProductBeingAdded || isProductBeingRemoved
         }
     "
@@ -87,25 +84,84 @@ if ($product->isSaleable()) {
     </span>
 </button>
 
-<!-- Select another option, visible for configurable products on mobile -->
+<!-- Select option button, appears only on mobile if variant not in cart -->
 <button
-    x-show="<?= (int)($productType === 'configurable') ?> && isVariantInCart && !<?= (int)$isPopup ?>"
-    class="animate-on-transition button button--filled-primary w-full md:hidden <?= $isSmall ? 'button--size-sm' : '' ?>"
-    @click.prevent="showProductActions()"
-    type="button"
+  <?php if($isProductInCart): ?>
+    style="display: none"
+  <?php endif; ?>
+  x-show="!isVariantInCart"
+  class="animate-on-transition button button--filled-primary w-full md:hidden <?= $isSmall ? 'button--size-sm' : '' ?> <?= ($isPopup || !$hasVariants) ? 'max-md:hidden' : '' ?>"
+  @click.prevent="showProductActions()"
+  :class="
+    {
+      'button--disabled': isProductBeingAdded || isProductBeingRemoved
+    }
+  "
+  :disabled="isProductBeingAdded || isProductBeingRemoved"
+  type="button"
 >
-    <span>
-        <?= __('Select another option') ?>
+  <span
+    x-show="!isProductBeingAdded && !isProductBeingRemoved"
+    class="inline-flex items-center"
+  >
+    <?= __('Select') ?>
+    <span class="ml-2">
+      <!-- TODO: Add first attribute name -->
     </span>
     <span
-        class="button__icon button__icon--right <?= $isSmall ? 'text-lg' : '' ?>"
+      class="button__icon button__icon--right <?= $isSmall ? 'text-lg' : '' ?>"
     >
-        <?= $hyvaicons->renderHtml('shopping-bag'); ?>
+      <?= $hyvaicons->renderHtml('shopping-bag'); ?>
     </span>
+  </span>
+
+  <span style="display: none" x-show="isProductBeingRemoved">
+      <?= __('Removing from cart...') ?>
+  </span>
+
+  <span style="display: none" x-show="isProductBeingAdded">
+      <?= __('Adding...') ?>
+  </span>
 </button>
 
-<!-- Show product button, appears only in popup if variant is in cart -->
+<!-- Select another option -->
+<button
+  <?php if(!$isProductInCart || $isPopup || !$hasVariants): ?>
+    style="display: none"
+  <?php endif; ?>
+  x-show="<?= (int) $hasVariants ?> && isVariantInCart && !<?= (int) $isPopup ?>"
+  class="animate-on-transition button button--filled-primary w-full md:hidden <?= $isSmall ? 'button--size-sm' : '' ?>"
+  @click.prevent="showProductActions()"
+  type="button"
+>
+  <span>
+    <?= __('Select another option') ?>
+  </span>
+  <span
+    class="button__icon button__icon--right <?= $isSmall ? 'text-lg' : '' ?>"
+  >
+    <?= $hyvaicons->renderHtml('shopping-bag'); ?>
+  </span>
+</button>
+
+<!-- Out of stock button -->
+<button
+  <?php if($isProductInCart || !$product->isSalable()): ?>
+    style="display: none"
+  <?php endif; ?>
+  x-show="!isVariantInCart || <?= (int) $isPopup ?>"
+  class="animate-on-transition button button--disabled button--outline-secondary flex-grow <?= $isSmall ? 'button--size-sm' : '' ?> <?= ($product->isSalable() || (!$isPopup && $hasVariants)) ? 'max-md:hidden' : '' ?> <?= $product->isSalable() ? 'md:hidden' : '' ?>"
+  disabled
+  type="button"
+>
+    <?= __('Out of stock') ?>
+</button>
+
+<!-- Show product button -->
 <a
+  <?php if($isProductInCart && !$isPopup): ?>
+    style="display: none"
+  <?php endif; ?>
   x-show="!isVariantInCart || <?= (int) $isPopup ?>"
   class="animate-on-transition button button--outline-primary w-full md:hidden"
   :class="
@@ -113,8 +169,8 @@ if ($product->isSaleable()) {
       'max-md:hidden': !isVariantInCart || !<?= (int) $isPopup ?>
     }
   "
-    href="#"
-    @click.prevent="hideProductActions()"
+  href="#"
+  @click.prevent="hideProductActions()"
 >
-<?= __('Show product') ?>
+  <?= __('Show product') ?>
 </a>
