--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-info.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-info.phtml
@@ -65,6 +65,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
             </span>
         <?php endif; ?>
 
+        <!-- TODO: Unhide -->
         <div role="group" aria-label="<?= $escaper->escapeHtmlAttr('Price') ?>" class="hidden">
             <?= $block->getChildHtml("product.info.price") ?>
         </div>
@@ -103,7 +104,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
                                     'w-full': isVariantInCart
                                 }"
                             >
-                                {$block->getChildBlock('product.actions')->setData('is_small', true)->toHtml()}
+                                {$block->getChildBlock('product.actions')->setData(['is_small' => true, 'is_popup' => false])->toHtml()}
                             </div>
                         </div>
                     </template>
@@ -120,7 +121,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
             <?php
                 $popup_id = 'product_actions-' . $product->getId();
                 $optionsBlock = $block->getLayout()->getBlock('product.info.options.configurable');
-                $options = $optionsBlock ? $optionsBlock->setData('is_popup', true)->toHtml() : '';
+                $options = $optionsBlock ? $optionsBlock->setData(['is_popup' => true, 'is_small' => false])->toHtml() : '';
                 $productActions = <<<HTML
                     <div class="contents" id="product-options">
                         {$options}
@@ -130,7 +131,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
                     <template x-portal="document.getElementById('popup-fixed-content-portal')">
                         <div x-show="\$store.popup.currentPopup === productActionsPopup">
                             <div class="mb-2 flex flex-grow justify-stretch gap-3 bg-bg-500 px-4">
-                                {$block->getChildBlock('product.actions')->setData('is_popup', true)->toHtml()}
+                                {$block->getChildBlock('product.actions')->setData(['is_popup' => true, 'is_small' => false])->toHtml()}
                             </div>
                         </div>
                     </template>
